# authly-lib

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
bindings/python/: .gitignore  Cargo.toml  README.md  docker-compose.yml  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_authly.py
bindings/python/tests/documents/: 0_testservice.toml
crates/authly-client/: CHANGELOG.md  Cargo.toml  README.md
crates/authly-client/src/: access_control.rs  background_worker.rs  builder.rs  connection.rs  error.rs  identity.rs  lib.rs  metadata.rs  token.rs
crates/authly-common/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/authly-common/proto/: authly_authority.proto  authly_connect.proto  authly_mandate_submission.proto  authly_service.proto
crates/authly-common/proto/authly/: connect.proto  mandate_submission.proto  service.proto
crates/authly-common/src/: access_token.rs  certificate.rs  document.rs  id.rs  lib.rs  mtls_server.rs  property.rs  proto.rs  service.rs
crates/authly-common/src/policy/: code.rs  engine.rs  mod.rs
crates/authly-common/tests/integration/: main.rs  test_document.rs  test_policies.rs
