[project]
name = "authly"
description = "Authly client utilities"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-env>=1.1.5",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
env = [
    "AUTHLY_URL=https://localhost:1443",
    "RUN_ENV=test",
]
