[package]
name = "authly-client"
version = "0.0.4"
description = "A Rust client for Authly"
keywords = ["authly", "auth", "authority", "iam", "service-mesh"]
categories = ["authentication", "cryptography"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = true

[features]
reqwest_012 = []
rustls_023 = ["dep:rustls"]

[dependencies]
authly-common = { path = "../authly-common", version = "0.0.4", features = ["access_token"] }
arc-swap = "1"
anyhow = "1"
fnv = "1"
futures-util = "0.3"
http = "1"
jsonwebtoken = "9"
pem = "3"
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
] }
rustls = { version = "0.23", optional = true }
rustls-pemfile = "2"
rustls-pki-types = "1"
thiserror = "2"
time = "0.3"
tonic = { version = "0.12", default-features = false, features = ["tls"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
x509-parser = "0.16"
