[package]
name = "authly-common"
version = "0.0.1"
description = "Authly common datatypes and algorithms"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = true

[features]
access_token = []
document = ["dep:serde_spanned", "dep:toml", "dep:uuid"]
tonic_server = ["tonic/transport"]
unstable-doc-cfg = []

[dependencies]
anyhow = "1"
byteorder = "1"
fnv = "1"
hexhex = "1"
int-enum = "1"
prost = "0.13"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_spanned = { version = "0.6", optional = true }
thiserror = "2"
toml = { version = "0.8", optional = true }
tonic = { version = "0.12", default-features = false, features = [
    "prost",
    "codegen",
    "channel",
] }
tracing = "0.1"
unsigned-varint = "0.8"
uuid = { version = "1", features = ["serde", "v4"], optional = true }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
indoc = "2"

[package.metadata.docs.rs]
features = [
    "unstable-doc-cfg",
    "access_token",
    "document",
]
