[package]
name = "authly-common"
version = "0.0.8"
description = "Authly common datatypes and algorithms"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = true

[features]
access_token = []
document = ["dep:serde_spanned", "dep:toml", "dep:uuid"]
mtls_server = [
    "dep:http",
    "dep:hyper",
    "dep:rustls",
    "dep:tower-server",
    "dep:x509-parser",
]
tonic_server = ["tonic/transport"]
unstable-doc-cfg = []

[dependencies]
anyhow = "1"
byteorder = "1"
fnv = "1"
hexhex = "1"
http = { version = "1", optional = true }
hyper = { version = "1", optional = true, default-features = false }
int-enum = "1"
prost = "0.13"
prost-types = "0.13"
rand = "0.8"
rustls = { version = "0.23", optional = true, default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_spanned = { version = "0.6", optional = true }
thiserror = "2"
toml = { version = "0.8", optional = true }
tonic = { version = "0.12", default-features = false, features = [
    "prost",
    "codegen",
    "channel",
] }
tower-server = { version = "0.3", optional = true }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"], optional = true }
x509-parser = { version = "0.16", optional = true }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
indoc = "2"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
] }

[package.metadata.docs.rs]
features = ["unstable-doc-cfg", "access_token", "document", "mtls_server"]
